<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/card_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/qaCopy"
        style="@style/QuickAction"
        android:text="@string/qa_copy" />

    <TextView
        android:id="@+id/qaPrompter"
        style="@style/QuickAction"
        android:text="@string/qa_prompter" />

    <TextView
        android:id="@+id/qaHistory"
        style="@style/QuickAction"
        android:text="@string/qa_history" />

    <TextView
        android:id="@+id/qaDismiss"
        style="@style/QuickAction"
        android:text="@android:string/cancel"
        android:textColor="@color/muted" />

</LinearLayout>
